# Daily-Task

./: .gitignore  README.md  check_kebab_dirs.py  dsa_20240930.py  dsa_20241002.py  dsa_20241003.py  dsa_20241004.py  dsa_20241007.py  dsa_20241008.py  dsa_20241009.py  dsa_20241010.py  dsa_20241011.py  dsa_20241014.py  dsa_20241015.py  dsa_20241016.py  dsa_20241017.py  dsa_20241018.py  dsa_20241021.py  dsa_20241022.py  dsa_20241023.py  dsa_20241024.py  dsa_20241025.py  dsa_20241028.py  dsa_20241029.py  dsa_20241030.py  dsa_20241031.py  dsa_20241101.py  dsa_20241104.py  dsa_20241105.py  dsa_20241106.py  dsa_20241107.py  dsa_20241108.py  dsa_20241112.py  dsa_20241113.py  dsa_20241114.py  dsa_20241115.py  dsa_20241118.py  dsa_20241119.py  dsa_20241120.py  dsa_20241121.py  (+112 more)
Agentic-AI/: 13_Self-RAG.ipynb  4_langgraph-agent.ipynb  Chatbot-with-memory.ipynb  groq-agent.py  langgraph-basic.ipynb  langgraph-chains.ipynb  langgraph.json  pydantic.ipynb  supervisor_agent.ipynb  tools.ipynb
Agentic-AI/.langgraph_api/: .langgraph_ops.pckl
Agentic-AI/GOOGLE/: intro_genai_sdk-v1.0.0.ipynb  intro_multimodal_use_cases-v2.0.0.ipynb
Agentic-AI/HowToGuide/: Graph_API_Basics.ipynb
Agentic-AI/practice/: HLD_Generation.ipynb  Powerful_Agentic_Memory.ipynb  calculator.ipynb  us-to-kg.ipynb
Autogen/: 01_AutoGen_Ollama.ipynb
CPH/01_Introduction/: comparing_two_numbers.cpp
CPH/02_Sorting/: a_stl_sort.cpp
CPP/learning/: .gitignore
CSES/: Counting_Divisors.cpp
Codeforces/CP_Templates/: README.md
Codeforces/STL/: README.md
Codeforces/learning/: 0001_fast_input_output.py  0002_optimized_data_structures.py  0003_math_and_bit_tricks.py  0004_loop_optimizations.py  0007_advanced_data_structures.py
DSA/: 0002.py  0010.py  0012.py  0014.py  0015.py  0022.py  0028.py  0034.py  0035.py  0040.py  0043.py  0045.py  0046.py  0054.py  0055.py  0059.py  0060.py  0062.py  0070.py  0073.py  0074.py  0078.py  0085.py  0086.py  0091.py  0098.py  0106.py  0107.py  0108.py  0109.py  0114.py  0117.py  0120.py  0128.py  0130.py  0138.py  0142.py  0145.py  0146.py  0148.py  (+53 more)
Data_Engineer/: 1.ipynb
Docs/DeepAgents/: requirements.txt
Fine_Tuning/: Challenge0001.ipynb  Challenge0003.ipynb
Fine_Tuning/Krish-Naik-Live/: 05_hugging_tutorial.ipynb  10_DPO_Trainer_for_LLM.ipynb
Idea/: AI-Tutor.ipynb  Voice-Assistant.ipynb  hackathon-krish.ipynb
Intern/: ai_tools.py
Interview-mistakes/: dsa-mistake.ipynb
Kaggle/: day01.ipynb
Kaggle/day02/: test.ipynb
LLMOPS-Industry_Ready_Projects/Assignment_001/: README.md  pyproject.toml
Langchain/: chat_Gemini.ipynb  pre_processing.ipynb  scraper.ipynb  sorted_data_20241108_203258.json
Langchain/Krish-Naik-Live/: 04_Hybrid_Search_and_reranking_in_RAG.ipynb  06_bert_finetuning_ner.ipynb  07_Finetuning_of_Mistral.ipynb  12_Pinecone_DB.ipynb  14_Graph_RAG.ipynb  pre_processing.ipynb  tf-idf-day07.ipynb
Langchain/Krish-Naik-Udemy/: Basic-Chatbot.ipynb
MLOps/DVC/: Extra.md  README.md
MLOps/Mlflow/: get-started.ipynb
Models/Gemini/: 01_Getting-Started.ipynb
New_Term/: 0001_annotations.py  0002_heap.py  0003_yield.py
OA/IDFC/: 01_nthHighestOrderID_palindrome.py  02_Priority_Queue_Element_Selection_Algorithm.py
Python/: 1.py  15.ipynb  18.ipynb  2.py  20.ipynb  21.ipynb  23.ipynb  24.ipynb  28.py  29.py  3.py  python_question_1.py  python_question_10.py  python_question_1000.py  python_question_1002.py  python_question_1003.py  python_question_1004.py  python_question_1005.py  python_question_1006.py  python_question_1009.py  python_question_101.py  python_question_1019.py  python_question_1020.py  python_question_1021.py  python_question_1023.py  python_question_1025.py  python_question_1026.py  python_question_1027.py  python_question_1033.py  python_question_1034.py  python_question_1035.py  python_question_1036.py  python_question_1038.py  python_question_104.py  python_question_1040.py  python_question_1043.py  python_question_1044.py  python_question_1046.py  python_question_1048.py  python_question_1049.py  (+555 more)
Python/DSA-Practice/: 16.ipynb  19.ipynb  25.ipynb  26.ipynb  28.ipynb  3.ipynb  32.ipynb  36.py  5.py
Python/Strick/: python_question_1.py  python_question_1008.py  python_question_1012.py  python_question_1013.py  python_question_1015.py  python_question_1017.py  python_question_102.py  python_question_1022.py  (+301 more)
Pytorch/: pytorch-autograd-ipynb.ipynb  pytorch-training-pipeline-using-nn-module.ipynb  pytorch-training-pipeline.ipynb  transformer.ipynb
RAG_Techniques/: README.md
Utils/: AI.ipynb  colab.py  free_terminal_colab.ipynb
all_prompt_engineering_techniques/: 001_all_prompt_engineering_techniques.ipynb  003_prompt-templates-variables-jinja2.ipynb  004_zero-shot-prompting.ipynb  007_self-consistency.ipynb  008_constrained-guided-generation.ipynb  009_role-prompting.ipynb  010_task-decomposition-prompts.ipynb  011_prompt-chaining-sequencing.ipynb  012_instruction-engineering-notebook.ipynb  014_ambiguity-clarity.ipynb  017_prompt-formatting-structure.ipynb  019_multilingual-prompting.ipynb
all_rag_techniques/: evalute_rag.py  helper_functions.py
notes/: mental_math_tricks.md
projects/agentic-ai/all-rag-techniques/: pyproject.toml
projects/agentic-ai/all-rag-techniques/notebook/: 002-simple-csv-rag.ipynb
utils/: rag.ipynb
(+1023 files in other folders)
