[project]
name = "daily-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "deepeval>=3.3.9",
    "faiss-cpu>=1.11.0.post1",
    "huggingface-hub[hf-xet]>=0.34.3",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-cohere>=0.4.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.6.6",
    "llama-index>=0.12.52",
    "llama-index-llms-groq>=0.3.2",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "tiktoken>=0.10.0",
    "unsloth>=2025.8.9",
    "unstructured>=0.18.11",
]
