[project]
name = "daily-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adam-atan2>=0.0.3",
    "agno>=2.5.17",
    "argdantic>=1.3.3",
    "boto3>=1.42.91",
    "chroma-hnswlib>=0.7.6",
    "chromadb>=1.0.15",
    "coolname>=2.2.0",
    "deepagents>=0.3.9",
    "deepeval>=3.3.9",
    "duckduckgo-search>=8.1.1",
    "einops>=0.8.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "googlesearch-python>=1.3.0",
    "groq>=0.31.0",
    "gtts>=2.5.4",
    "huggingface-hub[hf-xet]>=0.34.3",
    "hydra-core>=1.3.2",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-cohere>=0.4.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=1.1.14",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.6.6",
    "llama-index>=0.12.52",
    "llama-index-llms-groq>=0.3.2",
    "nest-asyncio>=1.6.0",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "omegaconf>=2.3.0",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "reasoning-from-scratch>=0.1.21",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.1",
    "spacy>=3.8.7",
    "speechrecognition>=3.16.0",
    "streamlit>=1.56.0",
    "tavily-python>=0.7.20",
    "tiktoken>=0.10.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "unsloth>=2025.8.9",
    "unstructured>=0.18.11",
    "wandb>=0.22.2",
    "wheel>=0.45.1",
    "wikipedia>=1.4.0",
]
